<resources>
    <string name="app_name">COVID Wellness Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_testing_sites">Testing Sites</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="total_deaths">TOTAL DEATHS</string>
    <string name="covid_unlock">COVID UNLOCK</string>
    <string name="total_tested_positive">TOTAL TESTED POSITIVE</string>
    <string name="total_recovered">TOTAL RECOVERED</string>
    <string name="recovered_today">RECOVERED TODAY</string>
</resources>
